<resources>
    <string name="app_name">Cards</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_cards">CreateCards</string>
    <string name="txt_card_name">Kort navn:</string>
    <string name="txt_card_number">Kort nummer:</string>
    <string name="hint_name">Navn</string>
    <string name="hint_number">Nummer</string>
    <string name="txt_debug_text_filler">Random text to see if this works</string>
    <string name="img_description">Kort bilde</string>
    <string name="store_name">Butikk navn</string>
</resources>
