<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CardDetailFragment" android:id="@+id/cd_root_layout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_card_name"
            android:id="@+id/cd_txt_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cd_img_card"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_card_number"
            android:id="@+id/cd_txt_number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cd_txt_card_name"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cd_txt_card_name"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cd_txt_name"
            app:layout_constraintStart_toStartOf="@+id/cd_txt_name" android:layout_marginStart="8dp"
            tools:text="@string/txt_debug_text_filler"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:ellipsize="end"
            android:singleLine="true"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cd_txt_card_number" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cd_txt_number"
            app:layout_constraintStart_toStartOf="@+id/cd_txt_number" android:layout_marginStart="8dp"
            tools:text="@string/txt_debug_text_filler"
            android:ellipsize="end" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:singleLine="true"/>
    <ImageView
            android:src="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cd_img_card"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/img_description"
            app:layout_constraintHeight_percent="0.25"
    />
</android.support.constraint.ConstraintLayout>