<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/icr_txt_name" android:layout_weight="1"
            android:text="@string/txt_card_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="12sp" app:layout_constraintStart_toEndOf="@+id/icr_img_card"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/txt_card_number"
            android:layout_width="0dp"
            android:layout_height="19dp" android:id="@+id/icr_txt_number" android:layout_weight="1"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/icr_txt_card_name" android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/icr_img_card" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/txt_debug_text_filler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/icr_txt_card_name"
            app:layout_constraintTop_toBottomOf="@+id/icr_txt_name"
            app:layout_constraintStart_toStartOf="@+id/icr_txt_name" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:singleLine="true"
            android:ellipsize="end"/>
    <TextView
            android:text="@string/txt_debug_text_filler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/icr_txt_card_number"
            app:layout_constraintTop_toBottomOf="@+id/icr_txt_number"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/icr_txt_number" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:ellipsize="end"
            android:singleLine="true"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@color/colorPrimaryDark"
            android:id="@+id/icr_img_card"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/img_description"
            app:layout_constraintWidth_percent="0.2"/>
</android.support.constraint.ConstraintLayout>
